# patchvision

./: Cargo.toml  LICENSE  example.yaml  example2.yaml
resources/default/: left.txt  right.txt
resources/rounded/: left.txt  right.txt  separator.txt  slot.txt
src/: balloon.rs  image.rs  lib.rs  main.rs  panel.rs  placeholder.rs  round.rs  slot.rs  template.rs  theme.rs
