[package]
name = "patchvision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
grid = "0.11.0"
indoc = "2.0.4"
itertools = "0.11.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
